--- a/notebooks/lecture8_AIC.ipynb
+++ b/notebooks/lecture8_AIC.ipynb
@@ -10,10 +10,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture6 AIC、多重共線性、AICをつかった変数選択の例\n",
+    "# Lecture8 AIC、多重共線性、AICをつかった変数選択の例\n",
     "\n",
     "参考：[pythonのstatsmodelsを使った重回帰分析で溶解度予測：AICによるモデル選択](https://future-chem.com/esol-reg-aic/)"
    ]
