--- a/notebooks/lecture9_svm_optimize.ipynb
+++ b/notebooks/lecture9_svm_optimize.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture7 最適化を使ってSVMを解く\n",
+    "# Lecture9 最適化を使ってSVMを解く\n",
     "<div dir='rtl'>\n",
     "2022.4岩政\n",
     "</div>\n",
