--- a/notebooks/lecture9_SVM.ipynb
+++ b/notebooks/lecture9_SVM.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture7 SVMの例、\n",
+    "# Lecture9 SVMの例、\n",
     "<div dir='rtl'>\n",
     "2022.4岩政\n",
     "</div>\n",
