--- a/notebooks/lecture13.ipynb
+++ b/notebooks/lecture13.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "NNJKNXgjVY49"
       },
       "source": [
-        "# Lecture 11 状態空間モデル\n",
+        "# Lecture 13 状態空間モデル\n",
         "\n",
         "## ローカルレベルモデルを試してみる"
       ]
