--- a/notebooks/lecture4.ipynb
+++ b/notebooks/lecture4.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture2  - データの取得と操作 -\n",
+    "# Lecture4  - データの取得と操作 -\n",
     "<div dir='rtl'>\n",
     "2022.4岩政\n",
     "</div>"
