--- a/notebooks/lecture4_pandas.ipynb
+++ b/notebooks/lecture4_pandas.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture2  - Pandas 入門 -\n",
+    "# Lecture4  - Pandas 入門 -\n",
     "<div dir='rtl'>\n",
     "2022.4岩政\n",
     "</div>\n",
