--- a/notebooks/lecture4_practice.ipynb
+++ b/notebooks/lecture4_practice.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "51wWoSv7f444"
       },
       "source": [
-        "# Lecture2 データの取得と操作(実習)\n",
+        "# Lecture4 データの取得と操作(実習)\n",
         "<div dir='rtl'>\n",
         "2022.4岩政\n",
         "</div>"
