--- a/notebooks/lecture5_extra_1.ipynb
+++ b/notebooks/lecture5_extra_1.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture3 実習\n",
+    "# Lecture5 実習\n",
     "\n",
     "ここでは、「マンガと学ぶデータビジュアライゼーション」掲載のデータを使って様々な可視化を実習します。\n",
     "\n",
