--- a/notebooks/lecture5_extra_prepare.ipynb
+++ b/notebooks/lecture5_extra_prepare.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture3 「マンガと学ぶデータビジュアライゼーション」"
+    "# Lecture5 「マンガと学ぶデータビジュアライゼーション」"
    ]
   },
   {
