--- a/notebooks/lecture6.ipynb
+++ b/notebooks/lecture6.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UI483qIzoiKL"
       },
       "source": [
-        "# Lec4 統計の基礎\n",
+        "# Lec6 統計の基礎\n",
         "<div dir='rtl'>\n",
         "2022.4岩政\n",
         "</div>\n",
