--- a/notebooks/lecture8_multi_reg_category.ipynb
+++ b/notebooks/lecture8_multi_reg_category.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture6 重回帰、statsmodelsにおけるカテゴリー変数の取り扱い\n",
+    "# Lecture8 重回帰、statsmodelsにおけるカテゴリー変数の取り扱い\n",
     "\n",
     "「Pythonで学ぶ計量経済学」より\n",
     "\n",
