--- a/notebooks/lecture10_classification.ipynb
+++ b/notebooks/lecture10_classification.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture8　パターン認識2(クラス分類)\n",
+    "# Lecture10　パターン認識2(クラス分類)\n",
     "<div dir='rtl'>\n",
     "2022.4岩政\n",
     "</div>\n",
