--- a/notebooks/lecture5_matplotlib.ipynb
+++ b/notebooks/lecture5_matplotlib.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture3　データの可視化\n",
+    "# Lecture5　データの可視化\n",
     "<div dir='rtl'>\n",
     "2022.4岩政\n",
     "</div>\n",
