lecture3のiymbをつうった

--- a/notebooks/lecture3.ipynb
+++ b/notebooks/lecture3.ipynb
@@ -48,7 +48,10 @@
    "metadata": {},
    "source": [
     "## フェーズ 2: データ準備/説明データ分析 (EDA)\n",
-    "Eコマース出荷データからデータセットをダウンロードし、ローカルPCに保存します。Jupyter ノートブックを開き、必要なライブラリをインポートします。データセットを読み込むには、ダウンロードしたCSVファイルを右クリックし、[コピー]を選択して、コードへのパスを貼り付ける必要があります。通常の文字列を生の文字列に変換するパスの前に置くことを忘れないでください。そうしないと、Unicode エラーが発生する可能性があります"
+    "Eコマース出荷データからデータセットをダウンロードし、ローカルPCに保存します。Jupyter ノートブックを開き、必要なライブラリをインポートします。\n",
+    "\n",
+    "###　【ToDo】 Colabへのデータのアップロード\n",
+    "データセットを読み込むには、ダウンロードしたCSVファイルを右クリックし、[コピー]を選択して、コードへのパスを貼り付ける必要があります。通常の文字列を生の文字列に変換するパスの前に置くことを忘れないでください。そうしないと、Unicode エラーが発生する可能性があります"
    ]
   },
   {
