--- a/notebooks/lecture1.ipynb
+++ b/notebooks/lecture1.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "igAx8_3Gy5ZT"
@@ -8,7 +9,7 @@
       "source": [
         "# Lecture1 はじめに\n",
         "<div dir='rtl'>\n",
-        "2022.4岩政\n",
+        "2023.4岩政\n",
         "</div>\n",
         "\n",
         "ここでは、講義における、python実行環境について説明します\n",
@@ -21,6 +22,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "CUJf9P8_y5ZY"
@@ -30,11 +32,12 @@
         "\n",
         "このファイルを開いたら、ドライブにコピーを押すことにより、自分のgoogle colaboratry環境にnotebookがコピーされます\n",
         "<div>\n",
-        "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/colab_drive_copy.png?raw=true\" width=\"500\"/>\n",
+        "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/colab_drive_copy.png?raw=true\" width=\"500\"/>\n",
         "</div"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -42,7 +45,7 @@
         "\n",
         "Google Driveを開くと\"マイドライブ＞Colab Notebook\"フォルダに、\"xxxx_のコピー.ipynb\"として一時的に保存されます\n",
         "<div>\n",
-        "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/colab_drive_view.png?raw=true\" width=\"500\"/>\n",
+        "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/colab_drive_view.png?raw=true\" width=\"500\"/>\n",
         "</div\n"
       ]
     },
