--- a/notebooks/lecture1.ipynb
+++ b/notebooks/lecture1.ipynb
@@ -1294,7 +1294,9 @@
       "source": [
         "## ChatGPTをつかった分析\n",
         "\n",
-        "講義では、ChatGPを使って、分析をしてみます。\n",
+        "講義では、ChatGPを使って、分析をしてみます。ChatGPTを使いながら、jupyter notebookにコードをコピーして動かしながら進めるというやり方を試してみます。\n",
+        "\n",
+        "注意）ChatGPTのみを活用した、レポート課題の作成は、厳に禁止とします。\n",
         "\n",
         ">次のCSVについて、分析しなさい。https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/fortune500.csv\n",
         "\n",
