--- a/notebooks/lecture3.ipynb
+++ b/notebooks/lecture3.ipynb
@@ -1182,7 +1182,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
