--- a/notebooks/lecture2.ipynb
+++ b/notebooks/lecture2.ipynb
@@ -216,6 +216,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "インデントエラーの例、直してみましょう"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (4257582935.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "for i in range(1,4):\n",
+    "    result += i * 2\n",
+    "    if result > 5:\n",
+    "        print(\"計算結果が5を超えました\")\n",
+    "            else:\n",
+    "        print(f\"計算結果は{i*2}です\")\n",
+    "\n",
+    "print(\"計算が終了しました\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 文字列（Strings）\n",
     "\n",
     "文字列、数値、真偽値はリテラルとよばれます。\n",
@@ -835,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -858,6 +892,49 @@
    "source": [
     "for i in range(1, 11):\n",
     "    print(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**range**\n",
+    "\n",
+    "range()を使うと簡単に連番シーケンスを作ることができます"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=range(5)\n",
+    "print(a)  # range(0, 5)\n",
+    "range(0, 5)\n",
+    "type(a)   # <class 'range'>\n",
+    "\n",
+    "list(a) # [0, 1, 2, 3, 4]\n",
+    "list(range(0,5,2)) #  [0, 2, 4]"
    ]
   },
   {
@@ -1740,7 +1817,7 @@
     "- 平均値: データの平均を表す指標\n",
     "- 中央値: データを小さい順に並べたときに、中央にある値\n",
     "- 分散・標準偏差: データのばらつきを表す指標\n",
-    "- 信頼区間: 推定値が含まれる区間を表す指標"
+    "- 共分散・相関係数:２つの変数の間の関係性"
    ]
   },
   {
@@ -2009,6 +2086,214 @@
     "\n",
     "print(variance(data))\n",
     "print(std_dev(data))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "今度は分散を、NumPyのvar()を使って求めます。一旦リストを、numpyのarrayに変換した上で、var()で標準偏差を求めていま"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "data = [182,155,166,177]\n",
+    "\n",
+    "dataarray=np.array(data)\n",
+    "np.var(dataarray)\n",
+    "# 108.5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**共分散**\n",
+    "\n",
+    "共分散は、2つの変数がどの程度一緒に変化するかを示す指標です。例えば、ある集団の身長と体重が共分散の例です。身長が高い人は体重も多くなる傾向があるため、身長と体重の値は正の共分散を持ちます。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0546875\n"
+     ]
+    }
+   ],
+   "source": [
+    "#身長\n",
+    "x = [154,177,162,180,175,\n",
+    "     155,164,168]\n",
+    "#足のサイズ\n",
+    "y = [23,27,24.5,28.5,26.5,\n",
+    "     24,24.5,25.5]\n",
+    "\n",
+    "#まず、$X$と$Y$それぞれの平均値を計算します\n",
+    "mean_x = sum(x)/len(x)\n",
+    "mean_y = sum(y)/len(y)\n",
+    "\n",
+    "#共分散を求めます\n",
+    "diff_xy = [(x[i]-mean_x)*(y[i]-mean_y) for i in range(len(x))]\n",
+    "#最後に、diff_xyリストの値の平均を取ります\n",
+    "cov_xy = sum(diff_xy)/len(x)\n",
+    "print(cov_xy)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numpyのcov()を用いて求めます"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[85.109375   15.0546875 ]\n",
+      " [15.0546875   2.83984375]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "data= np.array([x,y])\n",
+    "\n",
+    "c = np.cov(data,ddof=0)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cov()関数は、共分散行列を求めます、行列の１行１列目が身長の分散、２行２列が足のサイズの分散、対角にあるのが共分散です。"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**相関係数**\n",
+    "\n",
+    "相関係数は、2つの確率変数 $X$ と $Y$ の間の関連性を示す指標で、共分散に対してスケールが正規化された値です。相関係数は $-1 \\leq r \\leq 1$ の範囲の値をとります。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.88938166]\n",
+      " [0.88938166 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 身長データ\n",
+    "heights = np.array([172, 170, 175, 168, 176, 180, 179, 173, 178, 174])\n",
+    "# 体重データ\n",
+    "weights = np.array([70, 65, 80, 60, 85, 90, 77, 73, 82, 68])\n",
+    "\n",
+    "# 身長と体重の相関係数を求める\n",
+    "corr_coef = np.corrcoef(heights, weights)\n",
+    "print(corr_coef)  # 出力結果: 0.8817273811799049"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "corrcoef()関数は、各変数間の相関係数です。対角線は自己相関なので１になります。"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 課題\n",
+    "\n",
+    "１．次のリスト numbersから偶数だけ取り出し、それらの値を求めなさい。\n",
+    "   \n",
+    "numbers = [10, 4, 7, 8, 12, 44, 32, 21]\n",
+    "\n",
+    "\n",
+    "２． 標準正規分布に従う乱数100個を生成し、その平均と標準偏差を計算してください。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even numbers: [10, 4, 8, 12, 44, 32]\n",
+      "Sum of even numbers: 110\n",
+      "Mean: 0.05773086928971265\n",
+      "Standard deviation: 1.0981846003573286\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Task 1\n",
+    "numbers = [10, 4, 7, 8, 12, 44, 32, 21]\n",
+    "even_numbers = [x for x in numbers if x % 2 == 0]  # 偶数だけ取り出す\n",
+    "sum_even = sum(even_numbers)  # 和を求める\n",
+    "print(f\"Even numbers: {even_numbers}\")  # 出力結果: Even numbers: [10, 4, 8, 12, 44, 32]\n",
+    "print(f\"Sum of even numbers: {sum_even}\")  # 出力結果: Sum of even numbers: 110\n",
+    "\n",
+    "# Task 2\n",
+    "random_nums = np.random.normal(loc=0, scale=1, size=100)  # 平均0、標準偏差1の正規分布に従う乱数100個を生成する\n",
+    "mean = np.mean(random_nums)  # 平均を計算する\n",
+    "std_dev = np.std(random_nums)  # 標準偏差を計算する\n",
+    "print(f\"Mean: {mean}\")  # 出力結果: Mean: -0.0924666959753021\n",
+    "print(f\"Standard deviation: {std_dev}\")  # 出力結果: Standard deviation: 0.9883756496564458"
    ]
   },
   {
