バックスら修正

--- a/notebooks/lecture2.ipynb
+++ b/notebooks/lecture2.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "ここでは、講義のスライドの進行に合わせて確かめながら進みます\n",
     "\n",
+    "【備考】コードセル、テキストセル、どちらでも「SHIFT+Enter」にて、実行、更新ができます。\n",
+    "\n",
     "## Pythonの例"
    ]
   },
@@ -76,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "文を数行に分けて記述したい場合は、行末にバックスラッシュ(\\)を書きます"
+    "文を数行に分けて記述したい場合は、行末にバックスラッシュ(\\\\)を書きます"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "リスト・タプル・辞書中のカンマ(,)の後ろはバックスラッシュ(\\)を省略することができる、下はリストの例。"
+    "リスト・タプル・辞書中のカンマ(,)の後ろはバックスラッシュ(\\\\)を省略することができる、下はリストの例。"
    ]
   },
   {
@@ -136,7 +138,7 @@
    "metadata": {},
    "source": [
     "**コメント**\n",
-    "ハッシュ(#)から行末まではコメントとみなされます。文の分割のためのバックスラッシュ(\\)の後にはコメントは記述できません。"
+    "ハッシュ(#)から行末まではコメントとみなされます。文の分割のためのバックスラッシュ(\\\\)の後にはコメントは記述できません。"
    ]
   },
   {
