--- a/notebooks/lecture4_pandas.ipynb
+++ b/notebooks/lecture4_pandas.ipynb
@@ -1518,20 +1518,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## ご参考：Pandas CheatSheet\n",
     "CheatSheetその１：\n",
     "<div>\n",
-    "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/pandas_cheatsheet_ja1.png?raw=true\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/pandas_cheatsheet_ja1.png?raw=true\" width=\"500\"/>\n",
     "</div\n",
     "\n",
     "CheatSheetその2：\n",
     "<div>\n",
-    "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/pandas_cheatsheet_ja2.png?raw=true\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/pandas_cheatsheet_ja2.png?raw=true\" width=\"500\"/>\n",
     "</div"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
