--- a/notebooks/lecture4_pandas.ipynb
+++ b/notebooks/lecture4_pandas.ipynb
@@ -435,6 +435,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -442,7 +443,7 @@
     "スライドより、\n",
     "\n",
     "<div>\n",
-    "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/lec2_dataframe_headtail.png?raw=true\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/lec2_dataframe_headtail.png?raw=true\" width=\"500\"/>\n",
     "</div\n",
     "\n",
     "\n",
@@ -517,6 +518,11 @@
     "\n",
     "以下の例は**非明示的なインデクス**を使って、インデクスを最初の3つ、コラムを最初の2つ、と指定して、部分DataFrameを抽出しています。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
