--- a/notebooks/lecture4_pandas.ipynb
+++ b/notebooks/lecture4_pandas.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lecture4  - Pandas 入門 -\n",
     "<div dir='rtl'>\n",
-    "2022.4岩政\n",
+    "2023.4岩政\n",
     "</div>\n",
     "\n",
     "この実習ではpandasの基本的な操作を実際に動かしながら確かめます。\n",
@@ -363,6 +363,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このように、**明示的**にインデクスを、1,3,5と与えましたが。上から数えると、順番通りの0,1,2という**非明示的なインデクス**　が裏にあります。このあたりはインデクスを指定した、値の指示、loc,ilocのところで出てきます。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -518,11 +526,6 @@
     "\n",
     "以下の例は**非明示的なインデクス**を使って、インデクスを最初の3つ、コラムを最初の2つ、と指定して、部分DataFrameを抽出しています。"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -873,6 +876,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -880,7 +884,7 @@
     "###  DataFrames　を結合(Merge)する\n",
     "\n",
     "<div>\n",
-    "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/lec2_dataframe_merge_cheatsheet.png?raw=true\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/lec2_dataframe_merge_cheatsheet.png?raw=true\" width=\"500\"/>\n",
     "</div"
    ]
   },
@@ -1091,6 +1095,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1098,7 +1103,7 @@
     "スライドより\n",
     "\n",
     "<div>\n",
-    "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/lec2_dataframe_melt_concat.png?raw=true\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/lec2_dataframe_melt_concat.png?raw=true\" width=\"500\"/>\n",
     "</div"
    ]
   },
@@ -1110,7 +1115,7 @@
    "source": [
     "#'https://raw.githubusercontent.com/miwamasa/DataScience2022/main/notebooks/data/fortune500.csv'\n",
     "#df = pd.read_excel('./data/weather.xlsx')\n",
-    "df = pd.read_excel('https://raw.githubusercontent.com/miwamasa/DataScience2022/main/notebooks/data/weather.xlsx')\n",
+    "df = pd.read_excel('https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/weather.xlsx')\n",
     "df"
    ]
   },
@@ -1329,10 +1334,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (Tips)Colabにあらかじめ導入さｒているパッケージが古くて（例えば）外部サービスと接続できない場合\n",
+    "### (Tips)Colabにあらかじめ導入されているパッケージが古くて（例えば）外部サービスと接続できない場合\n",
     "- まずはパッケージのバージョンを確認する\n",
     ">!pip show pandas_datareader\n",
     "- バージョンが古かったら、バージョンを上げる\n",
@@ -1453,6 +1459,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1464,7 +1471,7 @@
     "- DataFrameの各行・各列に適用: apply()\n",
     "\n",
     "<div>\n",
-    "<img src=\"https://github.com/miwamasa/DataScience2022/blob/main/notebooks/figures/lec2_pandas_map_apply.png?raw=true\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/miwamasa/DataScience2023/blob/main/notebooks/figures/lec2_pandas_map_apply.png?raw=true\" width=\"500\"/>\n",
     "</div"
    ]
   },
