--- a/notebooks/lecture4_pandas.ipynb
+++ b/notebooks/lecture4_pandas.ipynb
@@ -1352,12 +1352,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas_datareader.data as web\n",
+    "import pandas\n",
+    "from pandas_datareader import data as pdr\n",
+    "import yfinance as yfin\n",
     "\n",
     "\n",
-    "goog = web.DataReader('GOOG', start='2004', end='2016',\n",
-    "                      data_source='yahoo')\n",
-    "goog.head()"
+    "yfin.pdr_override()\n",
+    "\n",
+    "spy = pdr.get_data_yahoo('SPY', start='2022-10-24', end='2022-12-23')\n",
+    "\n",
+    "spy.head()"
    ]
   },
   {
@@ -1385,8 +1389,8 @@
     "start = dt.date(2019,1,1)\n",
     "end = dt.date(2020,1,1)\n",
     "\n",
-    "df_ntt = web.DataReader('9432.T',\"yahoo\",start,end)\n",
-    "df_kddi = web.DataReader('9433.T',\"yahoo\",start,end)"
+    "df_ntt = pdr.get_data_yahoo('9432.T', start=start, end=end)\n",
+    "df_kddi = pdr.get_data_yahoo('9433.T', start=start, end=end)"
    ]
   },
   {
