lec4ipynbあぷでーと

--- a/notebooks/lecture4.ipynb
+++ b/notebooks/lecture4.ipynb
@@ -16,14 +16,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "最初に https://raw.githubusercontent.com/miwamasa/DataScience2022/main/notebooks/data/fortune500.csv\n",
+    "最初に https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/fortune500.csv\n",
     "\n",
     "を ローカルディスクにコピーします（ここではtmpフォルダの下にfortune500.csvとして保存します)\n",
     "\n",
-    "https://raw.githubusercontent.com/miwamasa/DataScience2022/main/notebooks/data/fortune500.csv\n",
+    "https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/fortune500.csv\n",
     "をブラウザで開けて、右クリックで「名前を付けて保存」でPCのローカルディスクにコピーします。"
    ]
   },
