--- a/notebooks/lecture5_extra_1.ipynb
+++ b/notebooks/lecture5_extra_1.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,16 @@
    "outputs": [],
    "source": [
     "#df = pd.read_csv(PATH_DATA)\n",
-    "df=pd.read_csv('https://raw.githubusercontent.com/miwamasa/DataScience2022/main/notebooks/data/preprocess/out/episodes.csv')"
+    "df=pd.read_csv('https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/preprocess/out/episodes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
    ]
   },
   {
