--- a/notebooks/aiit_query_process2023.ipynb
+++ b/notebooks/aiit_query_process2023.ipynb
@@ -34,7 +34,7 @@
           "height": 1000
         },
         "id": "0mRjMMWg0I55",
-        "outputId": "fc91b2b2-95fc-49c8-fbc7-48e3c5de4eae"
+        "outputId": "8d3ce206-0b13-4679-fc94-237ce93a61d6"
       },
       "outputs": [],
       "source": [
@@ -67,7 +67,7 @@
           "height": 206
         },
         "id": "n-qPNADr0I57",
-        "outputId": "9150700e-23e9-46a7-859d-7e9f8a54ebda"
+        "outputId": "ed071868-6e74-47e3-9205-893b45602f64"
       },
       "outputs": [],
       "source": [
@@ -82,7 +82,9 @@
         "id": "5z6djrFE0I58"
       },
       "source": [
-        "未提出でNaNのぎょうももあり、また最後の行がNaNで埋まっています、これは削除しましょう。"
+        "未提出でNaNの行ももあり、また最後の行がNaNで埋まっています、\n",
+        "\n",
+        "全てがNaNの行を削除しましょう。"
       ]
     },
     {
@@ -94,11 +96,37 @@
           "height": 1000
         },
         "id": "pSwitNR40I58",
-        "outputId": "b690a4ed-2a01-498c-ee9a-387464df0df4"
+        "outputId": "3b855e95-7344-43b1-d938-d448227655d4"
       },
       "outputs": [],
       "source": [
         "df2=df.dropna(how='all')\n",
+        "df2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lHcprI4FfnqT"
+      },
+      "source": [
+        "NaNがのこっています。１つでもNaNがある行を削除しましょう"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "mKr1Z3CFfI0V",
+        "outputId": "1f30ed4e-8175-4180-fcfc-680a60f6d465"
+      },
+      "outputs": [],
+      "source": [
+        "df2=df2.dropna()\n",
         "df2"
       ]
     },
@@ -138,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y_vRDY8W0I59",
-        "outputId": "d216467e-d486-47ce-e4f2-a789e9633228"
+        "outputId": "5f0e019c-2314-4b73-caae-6ee3e520c9de"
       },
       "outputs": [],
       "source": [
@@ -162,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GYEzQEhC0I59",
-        "outputId": "df2fb287-f533-49d6-e4b2-3e2df718561b"
+        "outputId": "268b962e-2323-409b-bdcb-76a8b5a06876"
       },
       "outputs": [],
       "source": [
@@ -190,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8V2ylKOZ0I5-",
-        "outputId": "d5f65838-4053-4237-f54e-a5974c62f93b"
+        "outputId": "eace4446-a41d-4985-add7-b639857d81fd"
       },
       "outputs": [],
       "source": [
@@ -218,7 +246,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ubaYvmba0I5-",
-        "outputId": "07725752-c205-4402-fe8e-690591cef650"
+        "outputId": "08c564c1-30c1-4f1d-8712-e717661e2a6d"
       },
       "outputs": [],
       "source": [
@@ -247,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JKjkY8KV0I5-",
-        "outputId": "13ebe70d-f8f2-4922-f651-48a4bfc9c228"
+        "outputId": "60f2de49-74e3-4bd0-c062-3a78484ce37b"
       },
       "outputs": [],
       "source": [
@@ -272,7 +300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQV3uHH_0I5-",
-        "outputId": "eca02b6d-e620-480c-b81b-c1d20eda8053"
+        "outputId": "7546a576-e75b-4ae2-ff98-cf63544ea61f"
       },
       "outputs": [],
       "source": [
@@ -287,7 +315,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sKYKgg-80I5-",
-        "outputId": "c1481db4-7b8b-4e78-8ecb-9d2d19616daf"
+        "outputId": "f3fee4f5-28a9-4b5b-edd3-8b47b7da1b7d"
       },
       "outputs": [],
       "source": [
@@ -313,7 +341,7 @@
           "height": 446
         },
         "id": "SnhE1QEd0I5_",
-        "outputId": "f7cd1fa9-115c-4d63-9fa7-26d4d205c42a"
+        "outputId": "5544d350-ee02-4958-a480-63af3246150d"
       },
       "outputs": [],
       "source": [
@@ -332,7 +360,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AJ29mF4u0I5_",
-        "outputId": "69a9665a-eabf-454f-80cb-28b4f3481d4e"
+        "outputId": "161192a6-32e2-488b-9309-0857d660bdc8"
       },
       "outputs": [],
       "source": [
@@ -357,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tyIiCzbN0I5_",
-        "outputId": "7d69a804-a62a-4e4e-d930-dc80f2b069f2"
+        "outputId": "d911f281-877e-4236-c385-74cba2233f12"
       },
       "outputs": [],
       "source": [
@@ -372,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hYnRk2L60I5_",
-        "outputId": "bda78086-ec2b-44bd-aeb6-aae6c203b129"
+        "outputId": "b4d7ad93-3a6f-46df-d325-6e545a8237e5"
       },
       "outputs": [],
       "source": [
@@ -388,7 +416,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uLJ3CsVY0I5_",
-        "outputId": "c33eea97-cd43-4657-c2f8-b6e5d3120b6b"
+        "outputId": "083d3f31-5318-4a87-ae8c-2eb50cdc50ee"
       },
       "outputs": [],
       "source": [
@@ -407,7 +435,7 @@
           "height": 1000
         },
         "id": "_FmI_N9i0I5_",
-        "outputId": "8cca911d-c6cd-4547-a696-5662663bbf3f"
+        "outputId": "0ac54840-6757-4fcc-fba2-9a22a12f6a51"
       },
       "outputs": [],
       "source": [
@@ -435,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A9VyWAEB0I5_",
-        "outputId": "49ad8a30-06b2-4e34-cce8-4627306bfd49"
+        "outputId": "e9f72037-e1d3-4157-dafd-f0e4aeb006ea"
       },
       "outputs": [],
       "source": [
@@ -450,7 +478,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UQ7kl1ZH0I6A",
-        "outputId": "ff744dce-0a57-4f29-e369-dce8d1da3ac2"
+        "outputId": "3c8d8e85-e16c-4fcd-8248-00cb6de4a22e"
       },
       "outputs": [],
       "source": [
@@ -469,7 +497,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4OAa6pPs0I6A",
-        "outputId": "ad496e80-327f-4a8d-df84-100648b47ac0"
+        "outputId": "2895adec-bb4b-4b60-ed72-79238071ea55"
       },
       "outputs": [],
       "source": [
@@ -502,7 +530,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EN3C-MZ40I6A",
-        "outputId": "911385e9-d255-44f0-e60f-4de1a9df0907"
+        "outputId": "81acbd06-3c80-43bd-eb4a-2c28552cd25f"
       },
       "outputs": [],
       "source": [
@@ -515,10 +543,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 446
+          "height": 1000
         },
         "id": "ZfzyndK80I6A",
-        "outputId": "01f25d49-5f79-4104-d36d-0739c9436d46"
+        "outputId": "0fc21649-89d2-41ee-849e-a18522b306b0"
       },
       "outputs": [],
       "source": [
