コメントアウト

--- a/notebooks/lecture5_extra_1.ipynb
+++ b/notebooks/lecture5_extra_1.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# 前処理の結果，以下に分析対象ファイルが格納されていることを想定\n",
-    "PATH_DATA = 'data/preprocess/out/episodes.csv'\n",
+    "#PATH_DATA = 'data/preprocess/out/episodes.csv'\n",
     "# Jupyter Book用のPlotlyのrenderer\n",
     "#RENDERER = 'plotly_mimetype+notebook'\n",
     "RENDERER = \"colab\""
