--- a/notebooks/lecture6.ipynb
+++ b/notebooks/lecture6.ipynb
@@ -83,7 +83,7 @@
       "source": [
         "# read dataset　\n",
         "#df = pd.read_csv('./datasets/iris/iris.csv')\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/miwamasa/DataScience2022/main/notebooks/datasets/iris/iris.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/datasets/iris/iris.csv')\n",
         "\n",
         "def histo():\n",
         "    # create histogram\n",
@@ -292,7 +292,8 @@
       "source": [
         "histo()\n",
         "plt.axvline(x_mean + var, color='darkorange')\n",
-        "plt.axvline(x_mean - var, color='darkorange')"
+        "plt.axvline(x_mean - var, color='darkorange')\n",
+        "plt.axvline(x_mean, color='red')"
       ]
     },
     {
@@ -376,7 +377,8 @@
       "source": [
         "histo()\n",
         "plt.axvline(x_mean + std, color='darkorange')\n",
-        "plt.axvline(x_mean - std, color='darkorange')"
+        "plt.axvline(x_mean - std, color='darkorange')\n",
+        "plt.axvline(x_mean , color='red')"
       ]
     },
     {
@@ -493,6 +495,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "3IzvLvf3oiKh"
@@ -502,6 +505,7 @@
         "\n",
         "25パーセント点と75パーセント点:\n",
         "\n",
+        "- 順番に並べて、その25%,75%の値をえるというベタな方法でやってみます。\n",
         "- まずはxをソートしてyを得ます\n",
         "- y.shape[0]は、yの要素数を返します。要素数の25%/75&のところの値を得ます\n",
         "  "
@@ -631,7 +635,7 @@
       "source": [
         "histo()\n",
         "plt.axvline(percentile_75th, color='darkorange')\n",
-        "plt.axvline(percentile_25th - var, color='darkorange')"
+        "plt.axvline(percentile_25th, color='darkorange')"
       ]
     },
     {
@@ -705,7 +709,9 @@
       "outputs": [],
       "source": [
         "histo()\n",
-        "plt.axvline(median, color='darkorange')"
+        "plt.axvline(percentile_75th, color='darkorange')\n",
+        "plt.axvline(percentile_25th, color='darkorange')\n",
+        "plt.axvline(median, color='red')"
       ]
     },
     {
