--- a/notebooks/lecture6.ipynb
+++ b/notebooks/lecture6.ipynb
@@ -1077,6 +1077,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Gk74fhk_oiKy"
@@ -1085,7 +1086,32 @@
         "### 中心極限定理\n",
         "一様乱数を用いる，この区間[a,b]の平均値は$\\mu = \\frac{a+b}{2}$, 分散$\\sigma^2 = \\frac{(b-a)^2}{12}$である。\n",
         "このn個（幾つかの値）の標本平均をN個（これは一定とする）発生させ，その分布を見ると，正規分布$N(\\mu, \\sigma^2/n )$に近づく。ここでは，標準正規分布に正規化する。\n",
-        "他の分布でも試してみられたい。"
+        "他の分布でも試してみられたい。\n",
+        "\n",
+        "scipy.stats.uniform.rvsは、この区間[a, b]を指定して、その範囲内のランダムな値を生成する関数です。引数として、範囲の下限であるloc（デフォルトは0）、範囲の上限であるscale（デフォルトは1）を指定します。また、size引数で生成する乱数の個数を指定できます。\n",
+        "\n",
+        "なので、 scipy.stats.uniform.rvs(size=n)は、[0,1]の範囲のランダム値をn個生成し、その平均は 1/2、分散は 1/12になります。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# locとscaleを指定すると、[loc,loc+scale]の区間の一様分布が得られる\n",
+        "x = np.linspace(-1,2,100)\n",
+        "plt.plot(x,scipy.stats.uniform.pdf(x,loc=0, scale=1), label='loc=0')"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "下記の図は、0を中心にして、元々の分散と標本数nの分散との比を考慮した分布を作ると、nが変わっても、同じような分布になっていることを示しています。"
       ]
     },
     {
