--- a/notebooks/lecture7_games.ipynb
+++ b/notebooks/lecture7_games.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Downloads/teamG.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/teamG.csv')\n",
     "df"
    ]
   },
@@ -283,9 +283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_caret2test)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_caret2test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
