--- a/notebooks/2023report1.ipynb
+++ b/notebooks/2023report1.ipynb
@@ -22,7 +22,13 @@
     "\n",
     "ここでは、「マンガと学ぶデータビジュアライゼーション」掲載のデータを使って、左のメニューにある、可視化について、講義（棒グラフ）以外の可視化を選択して実行し(7点)、考察しなさい(3点)\n",
     "\n",
-    "https://kakeami.github.io/viz-madb/index.html"
+    "\n",
+    "https://kakeami.github.io/viz-madb/index.html\n",
+    "\n",
+    "\n",
+    "- 各々「MADB Labを用いた作図例」以降が可視化事例になっている\n",
+    "- データ読み込みのセルは、スキップする(df = pd.read_csv(PATH_DATA))\n",
+    "- コラム名が、元のデータと異なるなどの、エラーが出る場合もあるので、都度修正する。"
    ]
   },
   {
@@ -55,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "データを読み込みます。"
+    "データを読み込みます。dfを壊してしまった場合も以下を、再実行すれば、dataframeが回復する"
    ]
   },
   {
@@ -286,7 +292,7 @@
     "この時、以下の仮説を立てる。\n",
     "</br>\n",
     "　帰無仮説(H0)：  彼らの回答は単なるあてずっぽうと同等だろう。</br>\n",
-    "　立仮設(H1)： 人々は正答率をよりよくするために役立つ知識を持っている\n",
+    "　対立仮設(H1)： 人々は正答率をよりよくするために役立つ知識を持っている\n",
     "\n",
     "帰無仮説では、1 歳児の80%は何らかの病気に対して予防接種を受けているという正解を選んだ回答者の比率p は約33.3%(つまり1/3)。ということになる。\n",
     "\n",
