--- a/notebooks/lecture8_multiple_regression.ipynb
+++ b/notebooks/lecture8_multiple_regression.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture5.4 重回帰分析（血圧と年齢の関係）\n",
+    "# Lecture8 重回帰分析（血圧と年齢の関係）\n",
     "- \"Linear regression using the Framingham Heart Study and StatsModels package\"より\n",
     "- https://github.com/RM-Santiago/framingham"
    ]
