--- a/notebooks/lecture8_multi_reg_category.ipynb
+++ b/notebooks/lecture8_multi_reg_category.ipynb
@@ -61,7 +61,7 @@
     "coeff_diff = model.params[1:] - model.params[0]\n",
     "\n",
     "# 棒グラフを作成\n",
-    "plt.bar(blood_types[1:], coeff_diff)\n",
+    "plt.bar(blood_types[:-1], coeff_diff)\n",
     "plt.xlabel('Blood Type')\n",
     "plt.ylabel('Coefficient Difference')\n",
     "plt.title('Coefficients Differences by Blood Type')\n",
