--- a/notebooks/lecture8.ipynb
+++ b/notebooks/lecture8.ipynb
@@ -443,13 +443,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 一般化線形モデル　\n",
     "### ロジスティック回帰モデル\n",
     "対象：Spector and Mazzeo (1980) - Program Effectiveness Data <br>\n",
-    "http://www.statsmodels.org/dev/datasets/generated/spector.html\n"
+    "http://www.statsmodels.org/dev/datasets/generated/spector.html\n",
+    "\n",
+    "橋本本5.5.5ロジスティック回帰モデルに出てきた例\n",
+    "\n",
+    "PSIが成績アップに有効化を検証する例\n",
+    "\n",
+    "- GPA：前期の成績(0～4)\n",
+    "- TUCE:統一テストの結果\n",
+    "- PSI:ある教育プログラムを受けた(1)、受けない(0)\n",
+    "- GRADE: 成績が上がった(1)、上がっていない(0)"
    ]
   },
   {
