--- a/notebooks/lecture9.ipynb
+++ b/notebooks/lecture9.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lecture9　パターン認識1\n",
     "<div dir='rtl'>\n",
-    "2022.4岩政\n",
+    "2023.5岩政\n",
     "</div>"
    ]
   },
@@ -586,6 +586,63 @@
     "Mlxtend (machine learning extensions) is a Python library of useful tools for the day-to-day data science tasks <br>\n",
     "https://rasbt.github.io/mlxtend/\n",
     "- Plotting Decision Regions https://rasbt.github.io/mlxtend/user_guide/plotting/plot_decision_regions/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: mlxtend in c:\\python38\\lib\\site-packages (0.19.0)\n",
+      "Collecting mlxtend\n",
+      "  Downloading mlxtend-0.22.0-py2.py3-none-any.whl (1.4 MB)\n",
+      "     ---------------------------------------- 1.4/1.4 MB 7.8 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: setuptools in c:\\python38\\lib\\site-packages (from mlxtend) (41.2.0)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.2 in c:\\python38\\lib\\site-packages (from mlxtend) (1.0.2)\n",
+      "Requirement already satisfied: joblib>=0.13.2 in c:\\python38\\lib\\site-packages (from mlxtend) (1.1.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 22.0.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\python38\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib>=3.0.0 in c:\\python38\\lib\\site-packages (from mlxtend) (3.5.1)\n",
+      "Requirement already satisfied: scipy>=1.2.1 in c:\\python38\\lib\\site-packages (from mlxtend) (1.8.0)\n",
+      "Requirement already satisfied: pandas>=0.24.2 in c:\\python38\\lib\\site-packages (from mlxtend) (1.4.0)\n",
+      "Requirement already satisfied: numpy>=1.16.2 in c:\\python38\\lib\\site-packages (from mlxtend) (1.22.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (4.29.1)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (3.0.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (1.3.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (9.0.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (21.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python38\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\python38\\lib\\site-packages (from pandas>=0.24.2->mlxtend) (2023.3)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\python38\\lib\\site-packages (from scikit-learn>=1.0.2->mlxtend) (3.1.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\python38\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend) (1.16.0)\n",
+      "Installing collected packages: mlxtend\n",
+      "  Attempting uninstall: mlxtend\n",
+      "    Found existing installation: mlxtend 0.19.0\n",
+      "    Uninstalling mlxtend-0.19.0:\n",
+      "      Successfully uninstalled mlxtend-0.19.0\n",
+      "Successfully installed mlxtend-0.22.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install mlxtend --upgrade"
    ]
   },
   {
