--- a/notebooks/lecture9.ipynb
+++ b/notebooks/lecture9.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1JcV7GaqH5k3"
@@ -8,7 +9,7 @@
       "source": [
         "# Lecture9　パターン認識1\n",
         "<div dir='rtl'>\n",
-        "2023.5岩政\n",
+        "2023.5岩政 \n",
         "</div>"
       ]
     },
@@ -55,15 +56,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "SVCで分類します。"
-      ],
       "metadata": {
         "id": "UKdo8LbIKPw1"
-      }
+      },
+      "source": [
+        "SVCで分類します。"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GK-5qnZyJpM1"
+      },
+      "outputs": [],
       "source": [
         "# データセットを描画する。\n",
         "fig, ax = plt.subplots(facecolor=\"w\")\n",
@@ -83,32 +89,27 @@
         "\n",
         "# サポートベクタを白丸でプロット\n",
         "ax.scatter(clf.support_vectors_[:, 0], clf.support_vectors_[:, 1], s=200, c='w', edgecolors='k')"
-      ],
-      "metadata": {
-        "id": "GK-5qnZyJpM1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "clf.support_vectors_"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qinndxNrKrvX"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "clf.support_vectors_"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "分類できたので、今度は予測します。"
-      ],
       "metadata": {
         "id": "eiv7470IKTNY"
-      }
+      },
+      "source": [
+        "分類できたので、今度は予測します。"
+      ]
     },
     {
       "cell_type": "code",
@@ -1175,6 +1176,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "interpreter": {
       "hash": "2db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
     },
@@ -1195,10 +1199,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.3"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": []
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
