--- a/notebooks/lecture9.ipynb
+++ b/notebooks/lecture9.ipynb
@@ -92,6 +92,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "サポートベクトルはこちらになります"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
