--- a/notebooks/lecture10_clustering.ipynb
+++ b/notebooks/lecture10_clustering.ipynb
@@ -1495,13 +1495,80 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 付録：カリフォルニア住宅価格 by ガウス混合分布\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "M8JiVdHo_g3D"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Lc5MJ588yJPd"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "#california_housing.csv\n",
+        "url = 'https://raw.githubusercontent.com/miwamasa/DataScience2023/main/notebooks/data/california_housing.csv'\n",
+        "home_data = pd.read_csv(url, usecols = ['longitude', 'latitude', 'median_house_value'])\n",
+        "print(len(home_data))\n",
+        "home_data.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(home_data[['latitude', 'longitude']], home_data[['median_house_value']], test_size=0.33, random_state=0)"
+      ],
+      "metadata": {
+        "id": "7lRoqr93AH1V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.mixture import GaussianMixture\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "\n",
+        "# ガウス混合モデルによるクラスタリングを行う\n",
+        "# 緯度と経度のデータを取り出す\n",
+        "X = home_data[['longitude', 'latitude']].values\n",
+        "\n",
+        "gmm = GaussianMixture(n_components=5)\n",
+        "gmm.fit(X)\n",
+        "y_pred = gmm.predict(X)\n",
+        "\n",
+        "# クラスタリングの結果を可視化する\n",
+        "sns.scatterplot(data = home_data, x = 'longitude', y = 'latitude', hue = y_pred)\n"
+      ],
+      "metadata": {
+        "id": "3XTvd-gk_6Gs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.boxplot(x = y_pred, y = home_data['median_house_value'])"
+      ],
+      "metadata": {
+        "id": "mjaq3M9-BL_E"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
