--- a/notebooks/2023report1 sample.ipynb
+++ b/notebooks/2023report1 sample.ipynb
@@ -272,11 +272,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "標準誤差を計算するために次式のように p ≈ pˆ = 0.82 という近似を代入する．\n",
+    "隔離を指示した比率は82%であるので、この比率に関する標準誤算（分散をNで割ったもの）を求める。\n",
+    "\n",
+    "講義資料(P38)より、標本比率 $\\hat{p}=X/N$とすると、$z=\\frac{\\hat{p}-p}{\\sqrt{p(1-p)/N}}$が正規分布$N(0,1)$に従う、\n",
+    "\n",
+    "頼度$(1-\\alpha)$の信頼区間は、\n",
+    "\n",
+    "$$(1-\\alpha)=P(-z_{\\alpha/2}\\le z \\le z_{\\alpha/2})$$\n",
+    "\n",
+    "となるので、$\\hat{p}$が信頼区間$(1-\\alpha)$に入る範囲は、\n",
+    "\n",
+    "$$\\Big[\\hat{p}-z_{\\alpha/2}\\sqrt{\\frac{\\hat{p}(1-\\hat{p})}{N}},\\hat{p}+z_{\\alpha/2}\\sqrt{\\frac{\\hat{p}(1-\\hat{p})}{N}}\\Big]$$\n",
+    "\n",
+    "\n",
+    "であった、ここで$\\hat{p}\\approx p$と近似し、p=0.82 を代入すると、\n",
     "\n",
     "\n",
     "$$\n",
-    "SE = \\sqrt{\\frac{p(1-p)}{n}}=\\sqrt{\\frac{0.82(1-0.82)}{1042}}=0.012\n",
+    "SE = \\sqrt{\\frac{\\hat{p}(1-\\hat{p})}{N}}=\\sqrt{\\frac{0.82(1-0.82)}{1042}}=0.012\n",
     "$$"
    ]
   },
