--- a/notebooks/2023report1 sample.ipynb
+++ b/notebooks/2023report1 sample.ipynb
@@ -309,7 +309,7 @@
    "source": [
     "標準誤差 SE = 0.012，点推定値 0.82 そして \n",
     "\n",
-    "z* = 1.96 を用いると(両側なので za=zb=1.96)\n",
+    "z* = 1.96 を用いると(両側とすると za=zb=1.96)\n",
     "\n",
     "信頼区間は次のようになる．\n",
     "\n",
@@ -351,19 +351,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "点推定値 ($\\hat{p} = 0.24$)，\n",
+    "\n",
+    "95% 信頼水準のための臨界値 (z⋆ = 1.96),\n",
+    "\n",
+    "$\\hat{p}$ の標準誤差 ($SE_{\\hat{p}} = \\sqrt{\\hat{p}(1 − \\hat{p})/n} = 0.060$) を求める必要がある\n",
+    "\n",
     "信頼区間を計算すると、\n",
     "\n",
-    "pˆ± z\n",
-    "⋆ × SEpˆ ,\n",
-    "\n",
+    "$$\n",
+    "\\hat{p}± z⋆ × SE_{\\hat{p}} \n",
+    "$$\n",
     "\n",
     "\n",
     "0.24 ± 1.96 × 0.060 ,\n",
+    "よって、信頼区間は\n",
     "(0.122, 0.358) .\n",
     "\n",
     "\n",
     "大学卒のすべての成人が乳児の予防接種について正しく回答する比率が 12.2% と 35.8%の間であるこ\n",
-    "とには 95%の信頼性がある"
+    "とには 95%の信頼性の範囲なので、帰無仮説は棄却できない。\n",
+    "\n",
+    "すなわち，大学卒の成人の正答率はあてずっぽうとは違うという見解を棄却するには十分な証拠にはなっていない。帰無仮説が真であることを指していないことに注意。"
    ]
   },
   {
